# backtesting

./: .gitignore  README.md  pyproject.toml  requirements.txt
day_trader/: __init__.py  cli.py  config.py  logging.py  metrics.py  models.py  run_tracking.py  ui.py
day_trader/broker/: alpaca.py  base.py  simulated.py
day_trader/core/: base.py  exceptions.py
day_trader/dashboard/: __init__.py  models.py  queries.py  server.py
day_trader/dashboard/static/: index.html  run_detail.html
day_trader/engine/: __init__.py  engine.py
day_trader/strategy/: base.py  loader.py
day_trader/strategy/examples/: bollinger_bands_strategy.py  momentum_strategy.py  rsi_strategy.py  simple_sma.py
day_trader/strategy/trials/: __init__.py  orb_strategy.py
day_trader/utils/: helpers.py
tests/: conftest.py
tests/integration/: test_dashboard_server.py  test_full_workflow.py  test_phase6_integration.py  test_replay_stream.py
tests/unit/: test_base.py  test_config.py  test_dashboard_queries.py  test_engine.py  test_helpers.py  test_metrics.py  test_models.py  test_new_strategies.py  test_run_tracking.py  test_strategy.py  test_strategy_loader.py  test_stream.py
