[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "day-trader"
version = "0.1.0"
description = "Lightweight CLI-based trading framework with Alpaca API integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Day Trader Team"}]

dependencies = [
    "alpaca-py>=0.20.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "pytz>=2024.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
trader = "day_trader.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
addopts = "--cov=day_trader --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "day_trader.dashboard.server"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["day_trader*"]
